build: merge repos

--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -1,26 +1,26 @@
 {
-	"id": "your-module-name",
-	"name": "your-module-name",
-	"shortname": "module-shortname",
-	"description": "A short one line description of your module",
+	"id": "riotgames-leagueoflegends",
+	"name": "riotgames-leagueoflegends",
+	"shortname": "LoL",
+	"description": "Module to control League of Legends",
 	"version": "0.0.0",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-your-module-name.git",
 	"bugs": "https://github.com/bitfocus/companion-module-your-module-name/issues",
 	"maintainers": [
 		{
-			"name": "Your name",
-			"email": "Your email"
+			"name": "Cynthia Ebert",
+			"email": "contact@cynthiaebert.de"
 		}
 	],
 	"runtime": {
 		"type": "node18",
 		"api": "nodejs-ipc",
 		"apiVersion": "0.0.0",
-		"entrypoint": "../main.js"
+		"entrypoint": "..\\dist\\index.js"
 	},
 	"legacyIds": [],
-	"manufacturer": "Your company",
-	"products": ["Your product"],
-	"keywords": []
+	"manufacturer": "Riot Games",
+	"products": ["League of Legends"],
+	"keywords": ["LoL", "League of Legends", "Riot", "Riot Games"]
 }
