--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-	"name": "your-module-name",
+	"name": "riotgames-leagueoflegends",
 	"version": "0.1.0",
-	"main": "main.js",
+	"description": "Bitfocus Companion Module for League of Legends",
+	"main": "dist/index.js",
 	"scripts": {
-		"format": "prettier -w .",
+		"dev": "tsc --watch",
+		"lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
+		"format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+		"test": "echo \"Error: no test specified\" && exit 1",
 		"package": "companion-module-build"
 	},
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/bitfocus/companion-module-your-module-name.git"
+		"url": "git+https://github.com/bitfocus/companion-module-riotgames-leagueoflegends.git"
 	},
 	"dependencies": {
-		"@companion-module/base": "~1.7.0"
+		"@companion-module/base": "~1.7.0",
+		"companion-module-utils": "^0.4.0",
+		"set-interval-async": "^3.0.3"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^1.4.2"
+		"@companion-module/tools": "^1.4.2",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"eslint": "^8.56.0",
+		"prettier": "^3.2.5",
+		"typescript": "^5.3.3"
 	},
 	"prettier": "@companion-module/tools/.prettierrc.json"
 }
