--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Bitfocus Companion Module for League of Legends",
 	"main": "dist/index.js",
 	"scripts": {
-		"dev": "tsc --watch",
+		"build": "tsc",
+		"watch": "tsc --watch",
 		"lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
 		"format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
